feat: basic UI screens and invite link functionallity
