# apps/server/src/auth/auth.controller.ts
@@ -1,10 +1,11 @@
-import { Body, Controller, Post } from '@nestjs/common';
+import { Body, Controller, Post, Request } from '@nestjs/common';
 import { AuthService } from './auth.service';
 import { Public } from './decorators/public.decorator';
-import { LoginResponseDto, OtpAuthDto, VerifyOtpDto } from './dto/auth.dto';
-import { ApiResponse } from '@nestjs/swagger';
+import { LoginResponseDto, OtpAuthDto, VerifyOtpDto, PractitionerSignUpDto } from './dto/auth.dto';
+import { ApiResponse, ApiTags } from '@nestjs/swagger';
 
-@Controller('/api/auth')
+@ApiTags('auth')
+@Controller('auth')
 export class AuthController {
   constructor(private readonly authService: AuthService) {}
 
@@ -20,5 +21,21 @@ export class AuthController {
   @ApiResponse({ type: LoginResponseDto })
   async verifyOtp(@Body() body: VerifyOtpDto): Promise<LoginResponseDto> {
     return this.authService.verifyOtp(body.email, body.otp, body.role);
+  }
+
+  @Post('practitioner/signup')
+  @Public()
+  @ApiResponse({ type: LoginResponseDto })
+  async practitionerSignUp(@Body() body: PractitionerSignUpDto): Promise<LoginResponseDto> {
+    return this.authService.handlePractitionerSignUp(body);
+  }
+
+  @Post('client/signup')
+  @Public()
+  @ApiResponse({ type: LoginResponseDto })
+  async clientSignUp(
+    @Body() body: { email: string; name: string; invitationToken: string }
+  ): Promise<LoginResponseDto> {
+    return this.authService.handleClientSignUp(body);
   }
 }
